# focus-guard

./: .gitignore  AGENTS.md  AI-CONFIG.md  README.md  TEST-REPORT.html  package-lock.json  package.json  start.bat  start.sh  stop.bat
.github/workflows/: ci.yml  release.yml
desktop/: app.js  index.html  styles.css
extension/: background.js  expired.html  expired.js  interference.css  interference.js  interstitial.css  interstitial.html  interstitial.js  manifest.json  native-messaging-host.example.json  options.html  options.js  unknown-toast.js  unknown.html  unknown.js
shared/: policy.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_analyzer.rs  focus_monitor.rs  lib.rs  reminder.rs  screenshot.rs
src-tauri/tests/: desktop_policy.rs
tests/: background-behavior.test.js  desktop-ui.test.js  extension.test.js  policy.test.js  run.js
tools/: install_global_agent_skills.ps1  privacy_redactor.py  verify_cnocr_redactor.py
