[package]
name = "focus-guard-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "focus_guard_desktop"
path = "src/lib.rs"

[[bin]]
name = "focus-guard-native-host"
path = "src/bin/native_host.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
image = "0.24"
dirs = "5.0"
windows = { version = "0.56", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Media"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
